package static

/**
Subject: 抽象主题
*/
type Subject interface {
	Request()
}
